oci/tailscale-subnet-router/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tailscale-subnet-router
  namespace: tailscale-subnet-router
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tailscale-subnet-router
  template:
    metadata:
      labels:
        app: tailscale-subnet-router
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
    spec:
      serviceAccountName: tailscale
      priorityClassName: system-cluster-critical
      tolerations:
        - key: "CriticalAddonsOnly"
          operator: "Exists"
          effect: "NoSchedule"
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.azure.com/mode: system
      containers:
        - name: tailscale
          # renovate: datasource=docker depName=tailscale/tailscale
          image: altinncr.azurecr.io/docker.io/tailscale/tailscale:v1.102.5
          resources:
            requests:
              cpu: 50m
              memory: 192Mi
          livenessProbe:
            exec:
              command:
                - tailscale
                - status
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - tailscale
                - status
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: root-cache
              mountPath: /root/.cache
            - name: var-run-tailscale
              mountPath: /var/run/tailscale
      volumes:
        - name: tmp
          emptyDir: {}
        - name: root-cache
          emptyDir: {}
        - name: var-run-tailscale
          emptyDir: {}
